# ai-human-audit-protocol

./: .editorconfig  .fieldlink.json  .pre-commit-config.yaml  AI-Human Partnership Framework for Extreme Conditions.md  AI_to_AI_partnership.md  Abstract.md  Adaptive-framework-example.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Co-creation.md  Cultural Bias in AI Assessment: How Traditional Trauma Processing Gets Pathologized.md  Elder.md  LOGIC-ETHICS-SAFETY.md  Organize.md  Organize2.md  PROJECTS.md  Principle of Restored Purpose.md  Principle-of-Reciprocal-Recognition.md  Protection protocol.md  README.md  README_AUDIT.md  SECURITY.md  conftest.py  convergence_forge.py  pyproject.toml  scope_completeness_audit.py  swarm_audit_profile.json  swarm_config.json  temporal_topology_inventory.py  validate.py
agents/: __init__.py  phantom_forecast_agent.py  sentinel_audit_agent.py
audits/: README.md  audit_runner.py  rational_actor_audit.py  substrate_aware_audit.py  trainer_mismatch_audit.py
consortium/: CLAUDE_REQUIREMENTS.md  FUTURE_BUILDS.md  README.md  bridges.py  collaboration_protocol.py  embodied_sensor.py  kfc_runtime.py  ontology_layer.py
examples/: full_audit_session.py
glyphs/: cognition_cycle.json  cultural_contrast.json  seasonal_intelligence.json
knowledge_archaeology/: README.md  biological_mismatch.py  knowledge_archaeology.py  playground.py
ledger/: README.md  blockchain_alternatives.md  ledger_interface.py  ledger_schema.json  verification_tools.py
logs/: 2025-08-30-1930Z.json  2025-08-30-session_001.json  2025-08-30T1930Z  README.md  (+12 more)
(+124 files in other folders)
